--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -483,7 +483,7 @@ Lembre-se que os exercícios devem ser administrados por um profissional.</strin
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oUM-7w-VYm">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHQ-Ry-C8t" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
@@ -526,10 +526,10 @@ Lembre-se que os exercícios devem ser administrados por um profissional.</strin
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0t-gZ-aaS">
                                                 <rect key="frame" x="20" y="255" width="359" height="474"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <mutableString key="text">Dor e má postura podem ser indicativos de que a criança possui escoliose. Porém, nem sempre a escoliose dá sinais visíveis (principalmente no início), por isso é necessário observar se seu tronco e ombros estão desalinhados (um está mais alto que o outro) ou se ela fica mais "torta” para um lado.
+                                                <string key="text">Dor e má postura podem ser indicativos de que a criança possui escoliose. Porém, nem sempre a escoliose dá sinais visíveis (principalmente no início), por isso é necessário observar se seu tronco e ombros estão desalinhados (um está mais alto que o outro) ou se ela fica mais "torta” para um lado.
 A hereditariedade é um fator a ser avaliado, pois se algum familiar tem ou teve escoliose, principalmente a infantil, há chances de a criança ter.
 É de extrema importância levar a criança para consultas com ortopedistas e fisioterapeutas, são eles que vão passar exames e alguns testes que mostrarão se ela tem escoliose e identifficarão o tipo de acordo com os resultados obtidos.
-Quanto mais cedo identificada e tratada, melhores serão os resultados.</mutableString>
+Quanto mais cedo identificada e tratada, melhores serão os resultados.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
