--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -8,10 +8,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Loading View-->
+        <scene sceneID="T0g-1o-Uc7">
+            <objects>
+                <viewController id="L8z-iL-RIh" customClass="LoadingView" customModule="ScolioKids" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dbj-mS-OfD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R1r-Ag-F5v">
+                                <rect key="frame" x="132" y="373" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="CXA-Ae-mM1"/>
+                                    <constraint firstAttribute="height" constant="150" id="vMs-jj-KpB"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="CsB-Ye-obM"/>
+                        <color key="backgroundColor" name="backgroundOne"/>
+                        <constraints>
+                            <constraint firstItem="R1r-Ag-F5v" firstAttribute="centerX" secondItem="dbj-mS-OfD" secondAttribute="centerX" id="NHy-A5-bZY"/>
+                            <constraint firstItem="R1r-Ag-F5v" firstAttribute="centerY" secondItem="dbj-mS-OfD" secondAttribute="centerY" id="s2T-CU-VIa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m2B-rE-u9D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-407" y="-1041"/>
+        </scene>
+        <!--Tab Bar Home-->
         <scene sceneID="pwQ-NT-dxv">
             <objects>
-                <tabBarController id="bB8-bU-eUJ" sceneMemberID="viewController">
+                <tabBarController id="bB8-bU-eUJ" customClass="tabBarHome" customModule="ScolioKids" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="40a-Mw-Qp6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -354,7 +382,7 @@ Procure um profissinal e siga suas instruções e recomendações.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jiO-E1-1lp">
-                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pTf-l4-MkR" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="406" height="1410.5"/>
